# twitch-fishinge

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.bot  Fishes.ipynb  Justfile  Rocket.toml  fishes.csv  fishes.sql  new-fish-list.md  sqlx-data.json  value.ggb
.ipynb_checkpoints/: Untitled-checkpoint.ipynb
assets/static/: site.webmanifest
assets/templates/: fishes.html.tera  index.html.tera  leaderboard.html.tera  stats.html.tera  user.html.tera
assets/templates/code/: 500.html.tera
crates/bot-framework/: Cargo.toml
crates/bot-framework/src/: lib.rs  runner.rs
crates/database/: Cargo.toml
crates/database/src/: lib.rs  models.rs
crates/database/src/entities/: accounts.rs  bundle.rs  catches.rs  fish_bundle.rs  fishes.rs  fishes_seasons.rs  messages.rs  mod.rs  prelude.rs  sea_orm_active_enums.rs  season_data.rs  seasons.rs  users.rs
crates/fishinge-bot/: Cargo.toml
crates/fishinge-bot/examples/: catch_floppa.rs  monte_carlo.rs
crates/fishinge-bot/src/: lib.rs  main.rs
crates/fishinge-web/: Cargo.toml  README.md
crates/fishinge-web/src/: db.rs  main.rs
crates/migration/: Cargo.toml
crates/migration/src/: lib.rs  m20220828_125955_create_fishes_table.rs  m20220828_131908_create_users_table.rs  m20220828_132240_create_catches_table.rs  m20220828_135214_create_messages_table.rs  m20220828_143222_create_seasons_table.rs  m20220828_143304_create_seasons_data_table.rs  m20220829_150037_create_accounts_table.rs  m20230426_115812_integrate_seasons.rs  m20230525_135103_rename_to_fish_set.rs
crates/supinic-fish-bot/: Cargo.toml
crates/supinic-fish-bot/src/: account.rs  bot_runner.rs  lib.rs  main.rs
crates/supinic-fish-bot/src/parser/: fish_response.rs  mod.rs
crates/twitch-fishinge/: Cargo.toml
crates/twitch-fishinge/src/: main.rs
crates/web-callback/: Cargo.toml
crates/web-fishinge/: Cargo.toml
crates/web-fishinge/src/: main.rs
crates/web-fishinge/src/assets/: style.css
crates/web-fishinge/src/templates/: base.html  fishes.html  index.html  leaderboard.html  user.html
docker/: .dockerignore  fishinge-bot.Dockerfile  fishinge-bot.Dockerfile.dockerignore  fishinge-monte_carlo.Dockerfile  fishinge-web.Dockerfile  fishinge-web.Dockerfile.dockerignore  supinic-fish-bot.Dockerfile  twitch-fishinge.Dockerfile  web-fishinge.Dockerfile
migrations/: 20220821102530_init.sql  20220821132603_add-bot-column.sql  20220821175509_add-fish-table.sql  20220822162030_rename-max_value-to-base_value.sql  20220827160939_add-catches-table.sql
src/: config.rs  lib.rs  main.rs  models.rs
templates/: base.html  fishes.html  index.html  leaderboard.html
