[package]
name = "twitch-fishinge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.57"
log = "0.4.17"
pretty_env_logger = "0.4.0"
ron = "0.8.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
settings = { version = "0.1.0", path = "../settings" }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
twitch-irc = { version = "4.0.0", default-features = false, features = ["transport-tcp", "transport-tcp-rustls-native-roots", "refreshing-token-rustls-native-roots"], git = "https://github.com/Chronophylos/twitch-irc-rs.git", branch = "impl-clone-for-useraccesstoken" }
