[package]
name = "twitch-fishinge"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = true 
opt-level = "z"
lto = true

[profile.dev.package.sqlx-macros]
opt-level = 3

[dependencies]
async-trait = "0.1.57"
chrono = "0.4.22"
directories = "4.0.1"
dotenvy = "0.15.2"
eyre = "0.6.8"
futures-lite = "1.12.0"
humantime = "2.1.0"
log = "0.4.17"
once_cell = "1.13.1"
phf = { version = "0.11.1", features = ["macros"] }
pretty_env_logger = "0.4.0"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
ron = "0.8.0"
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = "1.0.85"
settings = { version = "0.1.0", git = "https://github.com/Chronophylos/settings-rs.git", tag = "v0.1.0" }
sqlx = { version = "0.6.1", features = [
  "runtime-tokio-rustls",
  "sqlite",
  "macros",
  "migrate",
  "chrono",
  "offline",
] }
tera = { version = "1.17.0", default-features = false }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
twitch-irc = { version = "4.0.0", default-features = false, features = ["transport-tcp", "transport-tcp-rustls-webpki-roots", "refreshing-token-rustls-webpki-roots"], git = "https://github.com/robotty/twitch-irc-rs.git", rev = "9653261bf05f8adf469b084548146a2114b61782" }
url = "2.2.2"
warp = "0.3.2"

[dev-dependencies]
approx = "0.5.1"
test-case = "2.2.1"
