[package]
name = "bot-framework"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
database = { version = "0.1.0", path = "../database" }
log = "0.4.18"
miette = { version = "5.9.0", features = ["fancy"] }
sea-orm = "0.11.3"
signal-hook = "0.3.15"
signal-hook-tokio = "0.3.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
tokio-stream = "0.1.14"
twitch-irc = { version = "5.0.0", default-features = false, features = [
    "transport-tcp",
    "transport-tcp-rustls-webpki-roots",
    "refreshing-token-rustls-webpki-roots",
] }
