[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.22"
log = "0.4.17"
migration = { version = "0.1.0", path = "../migration" }
sea-orm = { version = "0.9.2", features = ["runtime-tokio-rustls", "macros", "sqlx-postgres"] }
serde = { version = "1.0.144", features = ["derive"] }
thiserror = "1.0.32"
