[package]
name = "fishinge-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
chrono = "0.4.22"
database = { version = "0.1.0", path = "../database" }
dotenvy = "0.15.2"
eyre = "0.6.8"
futures-lite = "1.12.0"
humantime = "2.1.0"
log = "0.4.17"
once_cell = "1.13.1"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
regex = "1.6.0"
reqwest = { version = "0.11.11", default-features = false, features = [
  "rustls-tls",
  "json",
] }
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
serde = { version = "1.0.143", features = ["derive"] }
serde_derive = "1.0.144"
serde_json = "1.0.85"
signal-hook = "0.3.14"
signal-hook-tokio = { version = "0.3.1", features = ["futures-v0_3"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
twitch-irc = { version = "4.0.0", default-features = false, features = ["transport-tcp", "transport-tcp-rustls-webpki-roots", "refreshing-token-rustls-webpki-roots"], git = "https://github.com/robotty/twitch-irc-rs.git", rev = "9653261bf05f8adf469b084548146a2114b61782" }
url = "2.2.2"

[dev-dependencies]
approx = "0.5.1"
indicatif = "0.17.1"
test-case = "2.2.1"
