[package]
name = "fishinge-web"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
chrono = "0.4.22"
database = { version = "0.1.0", path = "../database" }
dotenvy = "0.15.2"
eyre = "0.6.8"
humantime = "2.1.0"
log = "0.4.17"
once_cell = "1.13.1"
pretty_env_logger = "0.4.0"
rand = "0.8.5"
regex = "1.6.0"
settings = { version = "0.1.0", git = "https://github.com/Chronophylos/settings-rs.git", tag = "v0.1.0" }
sea-orm = { version = "0.9.2", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.32"
tokio = { version = "1.20.1", features = ["full"] }
url = "2.2.2"
serde = { version = "1.0.144", features = ["derive"] }
rocket = "0.5.0-rc.2"
rocket_db_pools = { version = "0.1.0-rc.2", features = ["sqlx_postgres"] }
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
serde_json = "1.0.85"

[dev-dependencies]
approx = "0.5.1"
test-case = "2.2.1"
