[package]
name = "fishinge-web"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.68"
chrono = "0.4.24"
database = { version = "0.1.0", path = "../database" }
dotenvy = "0.15.7"
eyre = "0.6.8"
humantime = "2.1.0"
log = "0.4.17"
once_cell = "1.17.1"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
regex = "1.8.2"
sea-orm = { version = "0.11.3", features = ["sqlx-postgres", "runtime-tokio-rustls"] }
thiserror = "1.0.40"
tokio = { version = "1.28.1", features = ["full"] }
url = "2.3.1"
serde = { version = "1.0.163", features = ["derive"] }
rocket = "0.5.0-rc.3"
rocket_db_pools = { version = "0.1.0-rc.3", features = ["sqlx_postgres"] }
rocket_dyn_templates = { version = "0.1.0-rc.3", features = ["tera"] }
serde_json = "1.0.96"
