[package]
name = "migration"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
name = "migration"
path = "src/lib.rs"

[dependencies]
async-std = { version = "^1", features = ["attributes", "tokio1"] }
chrono = "0.4.24"
sea-query = { version = "0.28.5", features = ["with-chrono"] }
sea-query-binder = { version = "0.3.1", features = ["with-chrono"] }

[dependencies.sea-orm-migration]
version = "^0.11.3"
features = ["runtime-tokio-rustls", "sqlx-postgres"]
