[package]
name = "supinic-fish-bot"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
database = { version = "0.1.0", path = "../database" }
dotenvy = "0.15.7"
log = "0.4.18"
miette = { version = "5.9.0", features = ["fancy"] }
once_cell = "1.17.2"
pretty_env_logger = "0.5.0"
regex = "1.8.3"
sea-orm = "0.11.3"
signal-hook = "0.3.15"
signal-hook-tokio = "0.3.1"
thiserror = "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
twitch-irc = { version = "5.0.0", default-features = false, features = [
    "transport-tcp",
    "transport-tcp-rustls-webpki-roots",
    "refreshing-token-rustls-webpki-roots",
] }
